# author-manifold

./: .gitignore  DATA_LICENSES.md  LICENSE  README.md  pyproject.toml
data/: pd_manifest.yaml
data/ai-longform/: manifest.jsonl
data/artifacts/: author_space_pd_v1.json  author_space_pd_v1_fwonly.json  author_space_v1_wave2.json  author_space_v1_wave2_fwonly.json  lm_envelopes_pd_3000w.json  lm_envelopes_pd_fwonly_3000w.json  lm_envelopes_wave2_3000w.json  lm_envelopes_wave2_fwonly_3000w.json
data/pastiche/: brinton_old_friends_new_fancies_1913.txt
data/pd_shelf/: README.md  body_trim_results.json  pd_books.yaml  pd_shelf_inventory.json  pd_shelf_manifest.yaml
docs/: METHODOLOGY.md  PAPER_DRAFT.md  TIER1_PAPER_OUTLINE.md  references.bib  tier1_related_work_reconciliation.md
docs/figures/: captions.md
docs/redteam/: RED_TEAM_SYNTHESIS.md  redteam_claims_attack.md  (+3 more)
reports/: author_manifold_report.html
tests/: conftest.py  test_analyze_folk_tells.py  test_author_space.py  test_lm_envelopes.py  test_mfw_vocab_filter.py  test_tier1_statistics.py  test_validate_author_space.py
tools/: analyze_completion_condition.py  analyze_folk_tells.py  analyze_model_self_consistency.py  analyze_paraphrase_sensitivity.py  analyze_style_transfer_dimensions.py  build_author_space.py  build_paper_figures.py  build_pd_shelf.py  cross_target_entry_matrix.py  cross_topic_probe.py  generate_ai_longform_corpus.py  place_pastiche_baseline.py  rerun_entry_analysis.py  run_e4_ai_placement.py  tier1_statistics.py  validate_author_space.py  validate_lm_envelopes.py
(+2128 files in other folders)
