[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "author-manifold"
version = "1.0.0"
description = "Author-relative measurement space for stylometric placement: calibration, validation harness, and AI long-form placement experiments"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "W. C. Bryant" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
# Paper-figure regeneration (tools/build_paper_figures.py); umap-learn is
# additionally needed to reproduce the released F1 projection exactly
# (PCA fallback otherwise, clearly labeled in the figure method note).
figures = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests that exercise the CLI tools on the shipped public-domain shelf",
]
